--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="accent_blue">#00C8F8</color>
     <color name="text_black">#000000</color>
+    <color name="text_grey">#A0A0A0</color>
 
 </resources>
