--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,10 +38,9 @@
         android:layout_width="140dp"
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/quicksand_bold"
         android:text="@string/komunikator_dla_biznesu"
         android:textAlignment="center"
-        android:textColor="#A8A8A8"
+        style="@style/textGrey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,10 +51,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:fontFamily="@font/quicksand_bold"
+        style="@style/textBig"
         android:text="@string/zaloguj_si"
-        android:textColor="#000000"
-        android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.338"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,27 +60,22 @@
 
     <Button
         android:id="@+id/login_accept_btn_ID"
-        android:layout_width="226dp"
-        android:layout_height="54dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
-        android:fontFamily="@font/quicksand_bold"
+        style="@style/buttonBlueStyle"
         android:text="@string/zaloguj"
-        android:textAllCaps="false"
-        app:backgroundTint="#00C8F8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password_ID" />
 
     <Button
         android:id="@+id/register_btn_ID"
-        android:layout_width="226dp"
-        android:layout_height="54dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:fontFamily="@font/quicksand_bold"
+        style="@style/buttonWhiteStyle"
         android:text="@string/zarejestruj_si"
-        android:textAllCaps="false"
-        android:textColor="#00C8F8"
-        app:backgroundTint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_accept_btn_ID" />
@@ -92,9 +84,8 @@
         android:id="@+id/email_label_ID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/quicksand_bold"
+        style="@style/textBlue"
         android:text="@string/email"
-        android:textColor="#00C8F8"
         android:labelFor="@id/email_ID"
         app:layout_constraintBottom_toTopOf="@+id/email_ID"
         app:layout_constraintEnd_toEndOf="@+id/email_ID"
@@ -107,9 +98,8 @@
         android:id="@+id/password_label_ID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/quicksand_bold"
+        style="@style/textBlue"
         android:text="@string/has_o"
-        android:textColor="#00C8F8"
         android:labelFor="@id/password_ID"
         app:layout_constraintBottom_toTopOf="@+id/password_ID"
         app:layout_constraintEnd_toEndOf="@+id/password_ID"
