--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,10 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
-        android:fontFamily="@font/quicksand_bold"
+        style="@style/textBig"
         android:text="@string/zarejestruj_si"
-        android:textColor="#000000"
-        android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,9 +35,8 @@
         android:id="@+id/email_register_label_ID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/quicksand_bold"
+        style="@style/textBlue"
         android:text="@string/email"
-        android:textColor="#00C8F8"
         android:labelFor="@+id/email_register_ID"
         app:layout_constraintBottom_toTopOf="@+id/email_register_ID"
         app:layout_constraintEnd_toEndOf="@+id/email_register_ID"
@@ -65,9 +62,8 @@
         android:id="@+id/name_register_label_ID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/quicksand_bold"
+        style="@style/textBlue"
         android:text="@string/imi"
-        android:textColor="#00C8F8"
         android:labelFor="@+id/name_register_ID"
         app:layout_constraintBottom_toTopOf="@+id/name_register_ID"
         app:layout_constraintEnd_toEndOf="@+id/name_register_ID"
@@ -93,9 +89,8 @@
         android:id="@+id/surname_register_label_ID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/quicksand_bold"
+        style="@style/textBlue"
         android:text="@string/nazwisko"
-        android:textColor="#00C8F8"
         android:labelFor="@+id/surname_register_ID"
         app:layout_constraintBottom_toTopOf="@+id/surname_register_ID"
         app:layout_constraintEnd_toEndOf="@+id/surname_register_ID"
@@ -121,9 +116,8 @@
         android:id="@+id/password_register_label_ID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/quicksand_bold"
+        style="@style/textBlue"
         android:text="@string/has_o"
-        android:textColor="#00C8F8"
         android:labelFor="@+id/password_register_ID"
         app:layout_constraintBottom_toTopOf="@+id/password_register_ID"
         app:layout_constraintEnd_toEndOf="@+id/password_register_ID"
@@ -134,13 +128,11 @@
 
     <Button
         android:id="@+id/register_accept_btn_ID"
-        android:layout_width="226dp"
-        android:layout_height="54dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
-        android:fontFamily="@font/quicksand_bold"
         android:text="@string/kontynuuj"
-        android:textAllCaps="false"
-        app:backgroundTint="#00C8F8"
+        style="@style/buttonBlueStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -151,10 +143,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/quicksand_bold"
+        style="@style/buttonWhiteStyle"
         android:text="@string/powr_t_do_ekranu_logowania"
-        android:textColor="#00C8F8"
-        app:backgroundTint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/register_accept_btn_ID" />
