--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -3,22 +3,24 @@
     <style name="buttonBlueStyle">
         <item name="android:fontFamily">@font/quicksand_bold</item>
         <item name="android:backgroundTint" tools:ignore="NewApi">@color/accent_blue</item>
-        <item name="android:width">@dimen/btn_layout_width</item>
-        <item name="android:height">@dimen/byn_layout_height</item>
+        <item name="android:minWidth">@dimen/btn_layout_width</item>
+        <item name="android:minHeight">@dimen/byn_layout_height</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
     <style name="buttonWhiteStyle">
         <item name="android:fontFamily">@font/quicksand_bold</item>
         <item name="android:textColor">@color/accent_blue</item>
         <item name="android:backgroundTint" tools:ignore="NewApi">@color/white</item>
-        <item name="android:width">@dimen/btn_layout_width</item>
-        <item name="android:height">@dimen/byn_layout_height</item>
+        <item name="android:minWidth">@dimen/btn_layout_width</item>
+        <item name="android:minHeight">@dimen/byn_layout_height</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
     <style name="textBig">
         <item name="android:fontFamily">@font/quicksand_bold</item>
-        <item name="android:textColor">@color/text_grey</item>
+        <item name="android:textColor">@color/text_black</item>
         <item name="android:textSize">@dimen/big_text_size</item>
     </style>
 
