--- a/app/src/main/res/layout/fragment_month_view.xml
+++ b/app/src/main/res/layout/fragment_month_view.xml
@@ -5,10 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".monthView">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <CalendarView
+        android:id="@+id/monthlyCalendar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+        android:layout_height="373dp"
+        android:dateTextAppearance="@style/textRegular"
+        android:firstDayOfWeek="2"
+        android:weekDayTextAppearance="@style/textGrey" />
 </FrameLayout>
