--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="byn_layout_height">54dp</dimen>
     <dimen name="btn_layout_width">226dp</dimen>
     <dimen name="big_text_size">28sp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
