--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -24,6 +24,11 @@
         <item name="android:textSize">@dimen/big_text_size</item>
     </style>
 
+    <style name="textRegular">
+        <item name="android:fontFamily">@font/quicksand_bold</item>
+        <item name="android:textColor">@color/text_black</item>
+    </style>
+
     <style name="textBlueBig">
         <item name="android:fontFamily">@font/quicksand_bold</item>
         <item name="android:textColor">@color/accent_blue</item>
