--- a/app/src/main/res/layout/fragment_day_view.xml
+++ b/app/src/main/res/layout/fragment_day_view.xml
@@ -10,13 +10,15 @@
         android:id="@+id/weekView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:columnGap="8dp"
+        app:dayBackgroundColor="#05000000"
+        app:dayNameLength="length_short"
         app:eventTextColor="@android:color/white"
-        app:textSize="12sp"
-        app:hourHeight="60dp"
         app:headerColumnPadding="8dp"
         app:headerColumnTextColor="#8f000000"
-        app:columnGap="8dp"
-        app:noOfVisibleDays="1"
         app:headerRowBackgroundColor="#ffefefef"
-        app:dayBackgroundColor="#05000000" />
+        app:hourHeight="60dp"
+        app:noOfVisibleDays="1"
+        app:textSize="12sp"
+        app:todayHeaderTextColor="@color/accent_blue" />
 </FrameLayout>
