--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,9 @@
     <dimen name="byn_layout_height">54dp</dimen>
     <dimen name="btn_layout_width">226dp</dimen>
     <dimen name="big_text_size">28sp</dimen>
-    <dimen name="text_margin">16dp</dimen>
+    <dimen name="medium_text_size">18sp</dimen>
+    <dimen name="small_text_size">12sp</dimen>
+    <dimen name="radius">5dp</dimen>
+    <dimen name="padding">10dp</dimen>
+    <dimen name="margin24">24dp</dimen>
 </resources>
