--- a/app/src/main/res/drawable/message_in.xml
+++ b/app/src/main/res/drawable/message_in.xml
@@ -2,7 +2,7 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/text_grey" />
+    <solid android:color="@color/gray" />
     <corners android:radius="40dp" />
     <padding android:left="15dp"
         android:right="15dp"
