--- a/app/src/main/res/layout/home_window_view.xml
+++ b/app/src/main/res/layout/home_window_view.xml
@@ -8,51 +8,53 @@
 
     <TextView
         android:id="@+id/hourTextV"
-        android:layout_width="152dp"
-        android:layout_height="76dp"
-        android:layout_marginTop="84dp"
+        android:layout_width="173dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="60dp"
         android:text="@string/hour"
         android:textAlignment="viewEnd"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.938"
+        app:layout_constraintHorizontal_bias="0.934"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/dateTextV"
-        android:layout_width="208dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="4dp"
+        android:layout_width="361dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="3dp"
         android:layout_marginEnd="30dp"
         android:text="@string/date"
         android:textAlignment="viewEnd"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.784"
+        app:layout_constraintHorizontal_bias="0.931"
         app:layout_constraintStart_toStartOf="@+id/hourTextV"
         app:layout_constraintTop_toBottomOf="@+id/hourTextV" />
 
     <TextView
         android:id="@+id/welcomeTextV"
         style="@style/textBig"
-        android:layout_width="287dp"
-        android:layout_height="43dp"
-        android:layout_marginEnd="200dp"
+        android:layout_width="285dp"
+        android:layout_height="29dp"
+        android:layout_marginEnd="80dp"
         android:text="@string/welcomeText"
         android:textAlignment="viewEnd"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/hourTextV"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.414"
+        app:layout_constraintHorizontal_bias="0.638"
         app:layout_constraintStart_toStartOf="@+id/hourTextV" />
 
     <CalendarView
         android:id="@+id/calendarView"
-        android:layout_width="374dp"
-        android:layout_height="303dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="378dp"
+        android:layout_height="225dp"
+        android:layout_marginTop="5dp"
+        android:dateTextAppearance="@style/textRegular"
+        android:weekDayTextAppearance="@style/textGrey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.638"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,12 +65,13 @@
         style="@style/textGrey"
         android:layout_width="347dp"
         android:layout_height="46dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="4dp"
         android:text="@string/upcomingTasks"
         android:textAlignment="viewEnd"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.921"
+        app:layout_constraintHorizontal_bias="0.75"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/calendarView" />
 
