first firebase read

--- a/app/src/main/res/layout/group_list_view.xml
+++ b/app/src/main/res/layout/group_list_view.xml
@@ -18,10 +18,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/groupListRecyclerView"
-        app:layout_constraintTop_toBottomOf="@id/groupListHeader"
-        android:layout_margin="@dimen/margin24" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/margin24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/groupListHeader" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
