--- a/app/src/main/res/layout/group_user_list_view.xml
+++ b/app/src/main/res/layout/group_user_list_view.xml
@@ -18,11 +18,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/groupUserListRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/groupUserListRecyclerView"
-        app:layout_constraintTop_toBottomOf="@id/groupUserListHeader"
-        android:layout_margin="@dimen/margin24" />
+        android:layout_margin="@dimen/margin24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/groupUserListHeader" />
 
     <!--TODO: button for add user (right bottom corner)-->
 
