--- a/app/src/main/res/layout/calendar_day_view.xml
+++ b/app/src/main/res/layout/calendar_day_view.xml
@@ -7,12 +7,12 @@
     tools:context=".CalendarDay">
 
     <com.alamkanak.weekview.WeekView
-        android:id="@+id/weekView"
+        android:id="@+id/oneDayView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:columnGap="@dimen/columnGap"
         app:dayBackgroundColor="#05000000"
-        app:dayNameLength="length_short"
+        app:dayNameLength="length_long"
         app:eventTextColor="@android:color/white"
         app:headerColumnPadding="@dimen/columnGap"
         app:headerColumnTextColor="#8f000000"
@@ -20,5 +20,8 @@
         app:hourHeight="60dp"
         app:noOfVisibleDays="1"
         app:textSize="@dimen/calendarTextSize"
-        app:todayHeaderTextColor="@color/accentBlue" />
+        app:todayHeaderTextColor="@color/accentBlue"
+        app:showNowLine="true"
+        app:nowLineColor="@color/gray"
+        app:nowLineThickness="2dp"/>
 </FrameLayout>
