--- a/app/src/main/res/layout/calendar_week_view.xml
+++ b/app/src/main/res/layout/calendar_week_view.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         app:columnGap="@dimen/columnGap"
         app:dayBackgroundColor="#05000000"
-        app:dayNameLength="length_long"
+        app:dayNameLength="length_short"
         app:eventTextColor="@android:color/white"
         app:headerColumnPadding="@dimen/columnGap"
         app:headerColumnTextColor="#8f000000"
@@ -21,6 +21,9 @@
         app:hourHeight="60dp"
         app:noOfVisibleDays="7"
         app:textSize="@dimen/calendarTextSize"
-        app:todayHeaderTextColor="@color/accentBlue" />
+        app:todayHeaderTextColor="@color/accentBlue"
+        app:showNowLine="true"
+        app:nowLineColor="@color/gray"
+        app:nowLineThickness="2dp"/>
 
 </FrameLayout>
