--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -2,13 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/dayView"
+        android:id="@+id/oneDayView"
         android:title="dziś" />
     <item
         android:id="@+id/upcomingDaysView"
         android:title="najbliższe dni" />
     <item
-        android:id="@+id/weekView"
+        android:id="@+id/threeDaysView"
         android:title="tydzień" />
     <item
         android:id="@+id/monthView"
