--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation_graph"
-    app:startDestination="@id/dayView">
+    app:startDestination="@id/oneDayView">
     <fragment
-        android:id="@+id/dayView"
+        android:id="@+id/oneDayView"
         android:name="com.example.io_app.CalendarDay"
         android:label="fragment_day_view"
         tools:layout="@layout/calendar_day_view" />
@@ -15,7 +15,7 @@
         android:label="fragment_upcoming_days_view"
         tools:layout="@layout/calendar_upcoming_days_view" />
     <fragment
-        android:id="@+id/weekView"
+        android:id="@+id/threeDaysView"
         android:name="com.example.io_app.CalendarWeek"
         android:label="fragment_week_view"
         tools:layout="@layout/calendar_week_view" />
