--- a/app/src/main/res/layout/user_profile_view.xml
+++ b/app/src/main/res/layout/user_profile_view.xml
@@ -8,17 +8,18 @@
 
     <ImageView
         android:id="@+id/userImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="164dp"
+        android:layout_height="160dp"
         android:layout_marginTop="@dimen/margin"
+        android:background="@drawable/ic_profile_pic"
         android:contentDescription="@string/userImageDescription"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.22"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:layout_constraintVertical_bias="0.154"
+        app:srcCompat="@drawable/ic_profile_pic" />
 
     <TextView
         android:id="@+id/userStatus"
@@ -37,12 +38,13 @@
 
     <TextView
         android:id="@+id/userNameLabel"
+        style="@style/textBlue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin"
         android:text="@string/name"
         android:textAlignment="textStart"
-        style="@style/textBlue"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.3"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,26 +52,27 @@
 
     <TextView
         android:id="@+id/userSurnameLabel"
+        style="@style/textBlue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin"
         android:text="@string/surname"
         android:textAlignment="textStart"
-        style="@style/textBlue"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@id/userNameLabel"
-        app:layout_constraintTop_toBottomOf="@+id/userName"/>
+        app:layout_constraintTop_toBottomOf="@+id/userName" />
 
     <TextView
         android:id="@+id/userEmailLabel"
+        style="@style/textBlue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin"
         android:text="@string/email"
         android:textAlignment="textStart"
-        style="@style/textBlue"
-        app:layout_constraintHorizontal_bias="0.325"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@id/userNameLabel"
-        app:layout_constraintTop_toBottomOf="@+id/userSurname"/>
+        app:layout_constraintTop_toBottomOf="@+id/userSurname" />
 
     <TextView
         android:id="@+id/userName"
