--- a/app/src/main/res/layout/chat_list_view.xml
+++ b/app/src/main/res/layout/chat_list_view.xml
@@ -31,49 +31,48 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/personalMessageRecyclerView"
         app:layout_constraintTop_toBottomOf="@id/personalMessage"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_margin="@dimen/margin24"
-        app:layout_constraintBottom_toTopOf="@id/groupMessage" />
+        android:layout_margin="@dimen/margin24" />
 
-    <TextView
-        android:id="@+id/groupMessage"
-        style="@style/textBlue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin24"
-        android:layout_marginStart="@dimen/margin24"
-        android:layout_marginEnd="@dimen/margin24"
-        android:text="@string/groupMessage"
-        app:layout_constraintTop_toBottomOf="@id/personalMessage"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-    <!--TODO: change constraint TOP-->
+<!--    <TextView-->
+<!--        android:id="@+id/groupMessage"-->
+<!--        style="@style/textBlue"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="@dimen/margin24"-->
+<!--        android:layout_marginStart="@dimen/margin24"-->
+<!--        android:layout_marginEnd="@dimen/margin24"-->
+<!--        android:text="@string/groupMessage"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/personalMessage"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent" />-->
+<!--    &lt;!&ndash;TODO: change constraint TOP&ndash;&gt;-->
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:id="@+id/groupMessageRecyclerView"
-        app:layout_constraintTop_toBottomOf="@id/groupMessage"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_margin="@dimen/margin24"
-        app:layout_constraintBottom_toTopOf="@id/addChatButton" />
+<!--    <androidx.recyclerview.widget.RecyclerView-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:id="@+id/groupMessageRecyclerView"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/groupMessage"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintRight_toRightOf="parent"-->
+<!--        android:layout_margin="@dimen/margin24"-->
+<!--        app:layout_constraintBottom_toTopOf="@id/addChatButton" />-->
 
-    <ImageButton
-        android:id="@+id/addChatButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/margin24"
-        android:layout_marginBottom="@dimen/margin24"
-        android:contentDescription="@string/sendDescription"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_add"
-        android:background="?android:attr/selectableItemBackground"/>
+<!--    <ImageButton-->
+<!--        android:id="@+id/addChatButton"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginEnd="@dimen/margin24"-->
+<!--        android:layout_marginBottom="@dimen/margin24"-->
+<!--        android:contentDescription="@string/sendDescription"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:srcCompat="@drawable/ic_add"-->
+<!--        android:background="?android:attr/selectableItemBackground"/>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
