--- a/app/src/main/res/layout/list_user_item.xml
+++ b/app/src/main/res/layout/list_user_item.xml
@@ -2,61 +2,66 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/item_list_user"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     app:cardElevation="8dp"
     app:cardCornerRadius="8dp"
     android:layout_margin="16dp"
-   >
+    >
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_goneMarginLeft="16dp"
+        android:id="@+id/linearLayout">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Imię : "
+                style = "@style/textBlueSmall"
+                ></TextView>
+            <TextView
+                android:id="@+id/firstNameTv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="name"
+                style = "@style/textGrey"
+                ></TextView>
+        </LinearLayout>
 
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_goneMarginLeft="16dp"
-            android:id="@+id/linearLayout">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:orientation="horizontal">
 
-            <LinearLayout
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:orientation="horizontal">
+                android:text="Nazwisko : "
+                style = "@style/textBlueSmall"
+                ></TextView>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="First name : "
-                            ></TextView>
-                    <TextView
-                        android:id="@+id/firstNameTv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="name"
-                        ></TextView>
-            </LinearLayout>
-
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="First name : "
-                            ></TextView>
-                        <TextView
-                            android:id="@+id/lastNameTv"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="name"
-                            ></TextView>
-                </LinearLayout>
-
+            <TextView
+                android:id="@+id/lastNameTv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="name"
+                style = "@style/textGrey"
+                ></TextView>
         </LinearLayout>
+
+    </LinearLayout>
 
 
 
