--- a/app/src/main/res/layout/activity_add_group.xml
+++ b/app/src/main/res/layout/activity_add_group.xml
@@ -7,6 +7,18 @@
     tools:context=".AddGroup"
     android:id="@+id/addUsersContainer">
 
+    <TextView
+        android:id="@+id/labelTview"
+        android:layout_width="304dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="76dp"
+        android:text="@string/labelTview"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.85"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
         android:id="@+id/groupNameEditText"
         android:layout_width="336dp"
@@ -14,24 +26,32 @@
         android:layout_marginTop="200dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/labelTview"
-        android:textAlignment="center"
+        android:text="Nazwa grupy"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.373"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        style = "@style/textMedium"/>
-
-    <Button
-        android:id="@+id/nextBtn"
-        style="@style/buttonBlueStyle"
-        android:layout_width="149dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/nextAddUsers"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.938"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/addUsersTview"
+        android:layout_width="145dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/addUsers_group"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.15"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/groupNameEditText" />
+
+    <Button
+        android:id="@+id/addUsersBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/addUsers_group"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.546"
+        app:layout_constraintStart_toEndOf="@+id/addUsersTview"
+        app:layout_constraintTop_toBottomOf="@+id/groupNameEditText" />
 </androidx.constraintlayout.widget.ConstraintLayout>
