--- a/app/src/main/res/layout/message_in_item_view.xml
+++ b/app/src/main/res/layout/message_in_item_view.xml
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/textRegular"
-        android:id="@+id/messageIn"
+        android:id="@+id/messageText"
         android:layout_below="@id/messageInAuthor"
         android:background="@drawable/message_in"
         android:text="@string/messageContent"
